--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name ="keywords" content="ccx01,sign,the day of sign,signXday,沙因,砂音,游戏">
 	<meta name="description" content="just for fun,及时行乐">
 
-	<title>the day of sign lv7.1</title>
+	<title>the day of sign lv7.2</title>
 
 	<link type="text/css" rel="stylesheet" href="css/jquery.pageslide.css" />
 	<link type="text/css" rel="stylesheet" href="css/index.css" />
@@ -13,10 +13,29 @@
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/jquery.pageslide.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
+	<script type="text/javascript">
+
+	  var _gaq = _gaq || [];
+	  _gaq.push(['_setAccount', 'UA-21979313-1']);
+	  _gaq.push(['_trackPageview']);
+
+	  (function() {
+	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	  })();
+
+	</script>
 </head>
 <body>
 	<div class="load_mes"></div>
-
+	<div class="tab">
+		<div class="words"></div>
+		<div class="video"></div>
+		<div class="article"></div>
+		<div class="game"></div>
+		<div class="all"></div>
+	</div>
 	<div class="mes_clouds">
 		<div id="list">
 			<a  href="#modal" class="second"><div>default page</div></a>
