--- a/Sign/index.html
+++ b/Sign/index.html
@@ -9,12 +9,12 @@
 
 </head>
 <body>
-<form name="form" action="layout/save.php" method="post">
+<form name="form" action="../mes/save.php" method="post">
 	<table class="sign">
 		<tbody>
 			<tr><td>tid:</td><td><input type="text" name="tid"/></td></tr>
 			<tr><td>name:</td><td><input type="text" name="name" value="Sign"/></td></tr>
-			<tr><td>sort:</td><td><input type="text" name="sort" value="article"/></td></tr>
+			<tr><td>sort:</td><td><input type="text" name="sort" value="words"/></td></tr>
 			<tr><td>words:</td><td><textarea name="words"></textarea></td></tr>
 			<tr><td>other:</td><td><textarea name="other"><img src="" /></textarea></td></tr>
 		</tbody>
