--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name ="keywords" content="ccx01,sign,the day of sign,signXday,沙因,砂音,游戏">
 	<meta name="description" content="just for fun,及时行乐">
 
-	<title>the day of sign lv7.2</title>
+	<title>the day of sign</title>
 
 	<link type="text/css" rel="stylesheet" href="css/jquery.pageslide.css" />
 	<link type="text/css" rel="stylesheet" href="css/index.css" />
@@ -30,11 +30,11 @@
 <body>
 	<div class="load_mes"></div>
 	<div class="tab">
-		<div class="words"></div>
-		<div class="video"></div>
-		<div class="article"></div>
-		<div class="game"></div>
-		<div class="all"></div>
+		<div class="words"><p>WORDS</p></div>
+		<div class="video"><p>VIDEO</p></div>
+		<div class="article"><p>ABOUT</p></div>
+		<div class="game"><p>GAME</p></div>
+		<div class="all"><p>ALL</p></div>
 	</div>
 	<div class="mes_clouds">
 		<div id="list">
