--- a/Sign/index.html
+++ b/Sign/index.html
@@ -16,7 +16,7 @@
 			<tr><td>name:</td><td><input type="text" name="name" value="Sign"/></td></tr>
 			<tr><td>sort:</td><td><input type="text" name="sort" value="words"/></td></tr>
 			<tr><td>words:</td><td><textarea name="words"></textarea></td></tr>
-			<tr><td>other:</td><td><textarea name="other"><img src="" /></textarea></td></tr>
+			<tr><td>other:</td><td><textarea name="other"></textarea></td></tr>
 		</tbody>
 	</table>
 	<button type="submit">go</button>
