--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head> 
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name ="keywords" content="ccx01,sign,the day of sign,signXday,沙因,砂音,游戏">
@@ -37,11 +37,11 @@
 <div class="load_mes"></div>
 
 <div class="tab">
-	<a href="#modal" class="panel"><div class="words"><p>WORDS</p></div></a>
+	<a href="#modal" class="panel" style="display: none;"><div class="words"><p>WORDS</p></div></a>
 	<a href="#modal" class="panel"><div class="video"><p>VIDEO</p></div></a>
 	<a href="#modal" class="panel"><div class="article"><p>ABOUT</p></div></a>
 	<a href="#modal" class="panel"><div class="game"><p>GAME</p></div></a>
-	<a href="#modal" class="panel"><div class="all"><p>ALL</p></div></a>
+	<a href="#modal" class="panel"><div class="all"><p>RANDOM</p></div></a>
 </div>
 <div id="modal" style="display:none">
     <a href="javascript:$.pageslide.close()" class="close">Close</a>
@@ -49,11 +49,10 @@
     </div>
 </div>
 
-	<div class="mes_clouds">
-		<ul id="item">
-		</ul>
+	<div style="position: absolute;top: 49%;left: 49%;">
+		你好，我是Sign。
 	</div>
 	<div class="shelter"></div>
-	
+
 </body>
 </html>
