--- a/index.html
+++ b/index.html
@@ -15,36 +15,15 @@
 
 </head>
 <body>
-<div id='curtain'></div>
-<div id="ball"></div>
-<div class='search'>
-	<div class="tip">
-		<div class="close c3"></div>
+	<div id="filter">
+		<label for="video" class="video"></label><input id="video" type="checkbox" />
+		<label for="game" class="game"></label><input id="game" type="checkbox" />
+		<label for="words" class="words"></label><input id="words" type="checkbox" />
+		<label for="article" class="article"></label><input id="article" type="checkbox" />
 	</div>
-	<div class="content">
-		<input class="keyword" />
-		<span class="submit">submit</span>
+	<div id="menu"></div>
+	<div id="content">
+		<a class="close"></a>
 	</div>
-</div>
-
-<div id="list">
-	<div class="tip">
-		<div class="close c1"></div>
-		<div class="video"></div>
-		<div class="game"></div>
-		<div class="words"></div>
-	</div>
-	<ul class="content">
-	</ul>
-</div>
-
-<div id="expand">
-	<div class="tip">
-		<div class="close c2"></div>
-	</div>
-	<ul class="content">
-	</ul>
-</div>
-
 </body>
 </html>
